--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
 ------------ */
 
 .header {
-  width: 1005;
-  height: 600px;
+  width: 100%;
+  height: 700px;
   background-color: #8a2be2;
   display: flex;
   justify-content: center;
@@ -21,7 +21,7 @@ body {
 .team {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-
+  
   width: 1150px;
   height: 400px;
 }
@@ -77,7 +77,8 @@ main {
   height: 500px;
   padding: 10px;
   margin-left: 15px;
-  box-shadow: 1px 0px 20px 0.5px;
+  box-shadow: 1px 1px 20px 1px;
+  
 }
 h3 {
   font-family: "Poppins", sans-serif;
@@ -91,3 +92,50 @@ h3 {
 /* ------------
 main section end
 -------------*/
+
+/*-------------------
+ footer section start
+ ------------------ */
+footer {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+.footer-section {
+  width: 500px;
+  height: 100px;
+  position: absolute;
+}
+
+.logo {
+  width: 500px;
+  height: 100px;
+}
+
+/*--------------
+ social link 
+ ------------*/
+
+.fa-instagram,
+.fa-dribbble,
+.fa-twitter,
+.fa-youtube {
+  font-size: 30px;
+  background-color: #dbdbdb;
+  padding: 10px;
+  border-radius: 50px;
+  margin: 5px;
+  text-decoration: none;
+}
+.copyright-symble p {
+  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.copyright-symble,
+.social-link {
+  margin-left: 100px;
+}
+/*-------------------
+ footer section end
+ ------------------ */
