--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .team {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  
+
   width: 1150px;
   height: 400px;
 }
@@ -29,6 +29,10 @@ body {
   color: white;
   font-family: "Poppins", sans-serif;
   font-size: 30px;
+}
+.team-banner:hover {
+  transform: scale(1.3) rotate(45deg);
+  transition: transform 1s;
 }
 
 .watch-live {
@@ -78,7 +82,6 @@ main {
   padding: 10px;
   margin-left: 15px;
   box-shadow: 1px 1px 20px 1px;
-  
 }
 h3 {
   font-family: "Poppins", sans-serif;
